--- a/views/principal.pug
+++ b/views/principal.pug
@@ -79,7 +79,7 @@ html(lang="es")
         .col-md-6
           a.btn.btn-secondary.btn-lg(href="/turnos")
             i.fas.fa-calendar-check.mr-2
-            | Turnos
+            | Gestion de Turnos
     script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js")
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js")
